--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,9 @@
 }
 
 h1,
-h3 {
+h3,
+h2,
+p {
     text-align: center;
 }
 
@@ -43,14 +45,15 @@ header
 }
 
 .hero-video {
+    border-radius: 1rem;
+    opacity: 0.5;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 500px;
     height: 500px;
     object-fit: cover;
-    margin: 2rem auto;
-    display: grid;
-    justify-content: space-around;
-    border-radius: 1rem;
-    opacity: 0.5;
+
 }
 
 .hero-text {
@@ -96,31 +99,33 @@ slider
     font-family: sans-serif;
     font-size: 2rem;
     font-weight: lighter;
+    margin-top: 2rem;
 }
 
 .banner {
     height: 500px;
     position: relative;
-    margin: 2rem auto;
-
+    display: grid;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
+    justify-items: center;
 
 }
 
 .banner img {
     width: 100%;
     height: 100%;
-    position: absolute;
     visibility: hidden;
     opacity: 0;
     transition: all, 2s;
     object-fit: cover;
-    
+    max-width: 400px;
+    position: absolute;
 
 }
 
 .banner i {
-    margin-left: 100px;
-    margin-right: 100px;
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -129,19 +134,21 @@ slider
     backdrop-filter: blur(5px);
     font-size: 42px;
     color: rgb(108, 111, 113);
+    mix-blend-mode: multiply;
     border-radius: 50%;
-    padding: 15px;
-    
+
+
+
 }
 
 .prev {
     right: 65%;
-    
+
 }
 
 .next {
     left: 65%;
-    
+
 }
 
 .show {
@@ -149,3 +156,197 @@ slider
     visibility: visible !important;
 }
 
+/*
+===============
+Two pictures
+===============
+*/
+
+.right-img,
+.left-img {
+    object-fit: cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    padding-bottom: 1.5rem;
+}
+
+.right-img-info,
+.left-img-info {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
+}
+
+/*
+================
+category
+================
+*/
+.category {
+    background-color: rgb(3, 128, 128);
+    padding: 1rem;
+
+}
+
+.category-img {
+    object-fit: cover;
+    width: 100%;
+    max-width: 200px;
+    margin-bottom: 1rem;
+}
+
+.category-img:hover {
+    opacity: 0.7;
+    cursor: pointer;
+}
+
+.cetegory-title {
+    display: inline-block;
+}
+
+/*
+================
+story
+================
+*/
+
+.story-title {
+    margin-top: 2.5rem;
+    font-size: 2rem;
+    font-family: sans-serif;
+    margin-bottom: 2rem;
+}
+
+.story-img {
+    max-width: 300px;
+    object-fit: cover;
+    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.story-card h3,
+.story-card p {
+    margin-bottom: 2rem;
+    display: inline-block;
+    margin-left: 4rem;
+    text-align: left;
+    max-width: 70%;
+}
+
+.story-card p {
+    font-size: 1.2rem;
+    font-family: sans-serif;
+    margin-bottom: 0;
+}
+
+.story-card a {
+    display: block;
+    margin-bottom: 1.5rem;
+}
+
+/*
+================
+login section
+================
+*/
+@media screen and (min-width: 400px) {
+    .login-section {
+        width: 100%;
+    }
+
+    .login-img {
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+        display: block;
+    }
+
+    .login-container {
+        position: absolute;
+        left: 60%;
+    }
+
+    .login-box {
+        height: 20rem;
+        background-color: rgba(255, 255, 255, 0.432);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
+        text-align: center;
+        position: absolute;
+        bottom: 140px;
+        right: -50px;
+        bottom: 95px;
+        width: 15rem;
+    }
+
+    .login-box h2 {
+        margin-bottom: 1.2rem;
+        font-size: 24px;
+        color: #333;
+    }
+
+    .input-box {
+        position: relative;
+        margin-bottom: 1.5rem;
+    }
+
+    .input-box input {
+        background: transparent;
+        border: none;
+        border-bottom: 2px solid #333;
+    }
+
+    .input-box .btn {
+        margin-top: 2rem;
+    }
+}
+
+ @media screen and (min-width: 576px) {
+    .login-section {
+        width: 100%;
+    }
+
+    .login-img {
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+        display: block;
+    }
+
+    .login-container {
+        position: absolute;
+        left: 60%;
+    }
+
+    .login-box {
+        height: 20rem;
+        background-color: rgba(255, 255, 255, 0.432);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
+        text-align: center;
+        position: absolute;
+        bottom: 140px;
+        left: 40px;
+        width: 15rem;
+    }
+
+    .login-box h2 {
+        margin-bottom: 1.2rem;
+        font-size: 24px;
+        color: #333;
+    }
+
+    .input-box {
+        position: relative;
+        margin-bottom: 1.5rem;
+    }
+
+    .input-box .btn {
+        margin-top: 2rem;
+    }
+} 
