--- a/css/styles.css
+++ b/css/styles.css
@@ -43,24 +43,35 @@ header
     border: transparent;
     cursor: pointer;
 }
+.hero{
+    margin-top: 2.5rem;
+    padding: 0.5rem;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; */
+    
+}
 
 .hero-video {
     border-radius: 1rem;
     opacity: 0.5;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
     width: 500px;
     height: 500px;
     object-fit: cover;
+    position: absolute;
 
 }
 
 .hero-text {
     text-align: center;
-    position: absolute;
-    top: 150px;
-    left: 40px;
+    height: 500px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: sans-serif;
 }
 
 .hero-text p {
@@ -196,6 +207,7 @@ category
     width: 100%;
     max-width: 200px;
     margin-bottom: 1rem;
+     display: inline-block;
 }
 
 .category-img:hover {
@@ -203,9 +215,6 @@ category
     cursor: pointer;
 }
 
-.cetegory-title {
-    display: inline-block;
-}
 
 /*
 ================
@@ -350,3 +359,23 @@ login section
         margin-top: 2rem;
     }
 } 
+
+/*
+=================
+icons
+=================
+*/
+.icons {
+    padding: 1rem;
+
+}
+
+.icon-img {
+    object-fit: cover;
+    width: 100%;
+    max-width: 200px;
+    margin-bottom: 1rem;
+    margin-top: 2rem;
+    display: inline-block;
+}
+
